--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <h1 class="m-auto">Angular Notes</h1>
 
     <div class="flex  align-items-center justify-content-between w-29rem mt-5 pl-3 pr-3 shadow-2 border-round-xs">
-      <p class="">5 Notes</p>
+      <p class="number-notes">{{ getNumberOfNotes() }} </p>
       <p-button label="Create a note" (click)="showDialog()" styleClass="p-button-link"></p-button>
     </div>
 
@@ -28,6 +28,6 @@
 
   </div>
 
-  <app-note [notes]="notes"></app-note>
+  <app-note [notes]="notes" (editNote)="onEditNote($event)"></app-note>
 
 </div>
