--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 @import "primeng/resources/themes/bootstrap4-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeflex/primeflex.css";
+@import "primeicons/primeicons.css";
 
 body {
     font-family: var(--font-family);
